# graph-diff

./: .gitignore  README.md  action.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
diff_dot/: dependencies.py  diff_render.py  dot.py  dot_file.py  git_utils.py  gradle.py  graph_diff.py  graph_file.py
diff_dot/cli/: __init__.py  commands.py  diff.py  git_gradle_diff.py  tests.py
diff_dot/gradle/: __init__.py
example_workflow/: test_action.yml
examples/: Signal-Android-playProdReleaseRuntimeClasspath.deps.txt  dependencies.txt  dependencies2.txt  revision1.deps  revision2.deps
lib/: Graph.py  diff_render.py  dot.py  error.py  gradle.py  graph_diff.py  graph_file.py
lib/cli/: __init__.py  diff.py  git_gradle_diff.py  tests.py
sample/: settings.gradle
sample/app/: build.gradle
sample/lib-a/: build.gradle
sample/lib-b/: build.gradle
src/: cd.py  cmd.py  diff_render.py  dot.py  git_utils.py  graph_file.py
src/cli/: __init__.py  diff.py  git_gradle_diff.py  tests.py
test_output/tests/: existing_connection.dot  existing_connection_diff.dot  new_chain_diff.dot  new_connection.dot  new_connection_diff.dot  new_node_and_connection.dot  new_node_and_connection_diff.dot  new_orphaned_node_diff.dot  removed_connection.dot  (+4 more)
test_src/: test_dependencies.py  test_gradle_dependency_line_parse.py
tests/: existing_connection.diff  new_chain.diff  new_connection_diff.txt  new_node_and_connection_diff.txt  new_orphaned_node.diff  removed_connection.diff  removed_node_and_connection.diff  removed_orphaned_node.diff
(+129 files in other folders)
