[project]
name = "diff-dot"
version = "2025.3.11.1"
description = "Compare Directional Graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.3",
    "gitpython>=3.1.32",
    "networkx>=3.1",
    "pytest>=8.3.4",
    "rich>=13.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]


[project.scripts]
gdiff = "diff_dot.cli:commands"

[tool.pytest.ini_options]
pythonpath = ["."]
